--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Shubham - Web Developer Portfolio</title>
+<title>Shubham - B.Tech Student & Web Developer</title>
 
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -177,14 +177,17 @@ footer {
 <section class="hero" id="home">
     <div>
         <div class="hero-text">Hi, I'm <span>Shubham</span> 👋</div>
-        <div class="hero-sub">Web Developer crafting clean, modern & responsive web experiences.</div>
+        <div class="hero-sub">B.Tech Student & Web Developer crafting modern & responsive web solutions.</div>
     </div>
     <img src="developer-png.webp" alt="Shubham Developer"/>
 </section>
 
 <section class="about" id="about">
     <h2>About Me</h2>
-    <p>I’m Shubham, a passionate Web Developer focused on modern UI, responsive design, and building creative digital experiences.</p>
+    <p>
+        I’m Shubham, a B.Tech student and passionate Web Developer. I focus on creating clean, responsive, and modern web applications.
+        I enjoy building projects that combine creativity and functionality, and I am constantly learning new technologies to improve my skills.
+    </p>
 </section>
 
 <section class="projects" id="projects">
